--- a/复习.md
+++ b/复习.md
@@ -712,7 +712,7 @@ bundle——最终输出文件（一个chunk对应一个bundle）
 
 - 优化打包构建速度——开发体验和效率
 
-  1. 优化babel-loader
+  1. 优化babel-loader 
 
      - 开启缓存 
      - 明确范围（include和exclude二者选一个就可以）
@@ -763,8 +763,6 @@ bundle——最终输出文件（一个chunk对应一个bundle）
              }),
      ```
 
-     
-
   5. ParallelUglifyPlugin（多进程压缩JS，只能生产环境）
 
      webpack内置Uglify工具压缩JS
@@ -797,7 +795,7 @@ bundle——最终输出文件（一个chunk对应一个bundle）
 
      
 
-  6. 自动刷新
+  6. 自动刷新（不能用于生产环境）
 
      watch:true  开启监听
 
@@ -816,7 +814,7 @@ bundle——最终输出文件（一个chunk对应一个bundle）
          }
      ```
 
-  7. 热更新
+  7. 热更新（不能用于生产环境）
 
      因为自动刷新的话，整个网页全部刷新，速度较慢，状态会丢失
 
@@ -861,15 +859,162 @@ bundle——最终输出文件（一个chunk对应一个bundle）
       }
      ```
 
-  4. DllPlugin
+  4. DllPlugin（动态链接库插件，只开发环境）
 
+     前端框架Vue体积大，构建慢，但是较稳定，不会经常升级版本；同一个版本只会构建一次，不用每次都重新构建
+     
+     webpack已内置DllPlugin支持
+     
+     DllPlugin——将vue打包出dll文件
+     
+     DllReferencePlugin——使用dll文件
+     
+     步骤1：新建一个webpack.dll.js文件，在里面引入DllPlugin，在module.exports里面配置entry，output，plugin
+     
+     ```javascript
+     const path = require('path')
+     const DllPlugin = require('webpack/lib/DllPlugin')
+     const { srcPath, distPath } = require('./paths')
+     
+     module.exports = {
+       mode: 'development',
+       // JS 执行入口文件
+       entry: {
+         // 把 React 相关模块的放到一个单独的动态链接库
+         react: ['react', 'react-dom']
+       },
+       output: {
+         // 输出的动态链接库的文件名称，[name] 代表当前动态链接库的名称，
+         // 也就是 entry 中配置的 react 和 polyfill
+         filename: '[name].dll.js',
+         // 输出的文件都放到 dist 目录下
+         path: distPath,
+         // 存放动态链接库的全局变量名称，例如对应 react 来说就是 _dll_react
+         // 之所以在前面加上 _dll_ 是为了防止全局变量冲突
+         library: '_dll_[name]',
+       },
+       plugins: [
+         // 接入 DllPlugin
+         new DllPlugin({
+           // 动态链接库的全局变量名称，需要和 output.library 中保持一致
+           // 该字段的值也就是输出的 manifest.json 文件 中 name 字段的值
+           // 例如 react.manifest.json 中就有 "name": "_dll_react"
+           name: '_dll_[name]',
+           // 描述动态链接库的 manifest.json 文件输出时的文件名称
+           path: path.join(distPath, '[name].manifest.json'),
+         }),
+       ],
+     }
+     ```
+     
+     步骤二：在package.json里面的scripts里面再加一条dll指令，就可以执行了
+     
+     ```javascript
+      "scripts": {
+         "test": "echo \"Error: no test specified\" && exit 1",
+         "dev": "webpack-dev-server --config build/webpack.dev.js",
+         "dll": "webpack --config build/webpack.dll.js"
+       },
+     ```
+     
+     步骤三：然后就可以在index.html里面引用了，但是需要DllReferencePlugin插件配置：1.在dev.js里面引入该插件，2. 在rules忽略node_modules ,3. 在 plugins 里面new一下，高数webpack使用了哪些动态链接库
+     
+     ```javascript
+     // 第一，引入 DllReferencePlugin
+     const DllReferencePlugin = require('webpack/lib/DllReferencePlugin');
+     
+     // 第二，不要再转换 node_modules 的代码
+         module: {
+             rules: [
+                 {
+                     test: /\.js$/,
+                     loader: ['babel-loader'],
+                     include: srcPath,
+                     exclude: /node_modules/ // 第二，不要再转换 node_modules 的代码
+                 },
+             ]
+         },
+     
+             
+           plugins: [
+             new webpack.DefinePlugin({
+                 // window.ENV = 'production'
+                 ENV: JSON.stringify('development')
+             }),
+             // 第三，告诉 Webpack 使用了哪些动态链接库
+             new DllReferencePlugin({
+                 // 描述 react 动态链接库的文件内容
+                 manifest: require(path.join(distPath, 'react.manifest.json')),
+             }),
+         ],
+             
+     ```
+     
      
 
 - 优化产出代码——产品性能
 
+  体积更小；合理分包，不重复加载；速度更快，内存使用更少
+
+  1. 小图片base64编码
+
+  2. bundle加hash（根据文件内容算hash值，如果文件没有改变hash值不会改变，就更容易命中缓存）
+
+  3. 懒加载
+
+  4. 提取公共代码
+
+  5. IngorePlugin（忽略多语言，只引用自己需要的语言）
+
+  6. 使用CDN加速
+
+     步骤： 1.  在prod.js的output设置一个公共publicPath，修改所有静态文件的url前缀
+
+     ```javascript
+         output: {
+             filename: 'bundle.[contentHash:8].js',  // 打包代码时，加上 hash 戳
+             path: distPath,
+             // publicPath: 'http://cdn.abc.com'  // 修改所有静态文件 url 的前缀（如 cdn 域名），这里暂时用不到
+         },
+     ```
+
+     			2. 把打包出来的js，css，图片上传到cdn上面
+
+  7. 使用production
+
+     自动开启压缩代码——webpack4.x后才有
+
+     vue react会自动删掉调试代码（如开发环境的warning）
+
+     启动Tree-Shaking（必须使用ES6 Module才能使tree-shaking生效）
+
+     ​	为什么？
+
+     ​	ES6Module静态引入，编译时引入；Commonjs动态引入，执行时引入；只有静态分析才能实现Tree-Shaking
+
+     ![image-20210326164021355](C:\Users\Damo\AppData\Roaming\Typora\typora-user-images\image-20210326164021355.png)
+
+  
+
+  1. Scope Hosting（代码体积越大效果越好）
+
+     代码体积更小；创建作用域更少；代码可读性更好
+
+     ![image-20210326164614264](C:\Users\Damo\AppData\Roaming\Typora\typora-user-images\image-20210326164614264.png)
 
 
 
+#### 10. babel（将各种语言转换为浏览器可以认识的语言）
+
+
+
+
+
+
+
+
+
+### websoket
 
 #### 介绍
 
