--- a/复习.md
+++ b/复习.md
@@ -10,7 +10,7 @@ function my_new () {
 	let Fun = [].shift.call(arguments) // 获取构造函数
     obj.__proto__ = Fun.prototype  // 将obj连接到Fun的原型上
     let result = Fun.apply(obj, arguments) // 绑定this
-    return typeof obj === 'Object' ? result : obj // 确保返回的是一个对象
+    return typeof obj === 'object' ? result : obj // 确保返回的是一个对象
 }
 ```
 
@@ -126,12 +126,6 @@ ReferenceError 同作用域判别失败相关，而 TypeError 则代表作用域
 老生代算法是：标记清除（会产生内存碎片）和标记压缩（整理内存碎片）
 
 会遍历堆中所有对象，然后标记获得对象，在标记完成后，销毁所有没有被标记的对象。在标记大型内存时，可能需要几百毫秒才能完成一次标记。去处对象后悔造成对内存出现碎片的情况，当碎片超过一定限制后就会启动压缩算法，在压缩过程中，将活的对象向一段移动，直到所有对象都移动完成然后清理不需要的内存。
-
-
-
-
-
-##### 2. 老生代算法
 
 #### 8. JavaScript机制（Event Loop）
 
@@ -387,7 +381,7 @@ promise的构造函数时同步执行，promise.then函数时异步执行的
 
 Promise实现了链式调用，也就是说每次调用then之后都返回一个promise，并且是一个全新的promise，原因也是因为状态不可变。如果在then中使用了return，那么return的值会被Promise.resolve()包装
 
-Promise很好的解决了毁掉地狱的went8i，但是也存在一些缺点，比如无法取消promise，错误需要通过回调函数捕获
+Promise很好的解决了回调地狱的问题，但是也存在一些缺点，比如无法取消promise，错误需要通过回调函数捕获
 
 #### 18. async和await
 
@@ -493,7 +487,7 @@ await内部实现了generator，其实await就是generator + Promise的语法糖
 
 cookie不建议用于存储，如果没有大量数据存储需求的话，可以使用localStorage和sessionStorage。不怎么改变的数据使用localStorage，否则另一个
 
-cookoe需要注意安全性：
+cookie需要注意安全性：
 
 |   属性    |                             作用                             |
 | :-------: | :----------------------------------------------------------: |
@@ -583,7 +577,7 @@ service worker是浏览器背后用来实现缓存的独立线程。使用servic
 
    Last-Modified表示本地文件最后修改日期，If-Modified-Since会将Last-Modified的值发给服务器，询问服务器在该日期的资源是否有更新，有更新就会将新的资源发送回来，否则就是304
 
-   但是Last-Modified只能以秒计时，如果在补课感知的时间内修改完文件，那么服务端会认为资源还是命中了，不会返回正确资源
+   但是Last-Modified只能以秒计时，如果在不可感知的时间内修改完文件，那么服务端会认为资源还是命中了，不会返回正确资源
 
    所以在HTTP1.1出现了ETag
 
@@ -609,6 +603,8 @@ service worker是浏览器背后用来实现缓存的独立线程。使用servic
 ##### 1. XSS
 
 攻击者在目标网站上注入恶意脚本，使之在用户的浏览器上面运行。XSS利用的是用户对指定网站的信任
+
+XSS分为多种类型：持久型（攻击代码被写进数据库）和非持久型（通过修改url参数-Chrome自动就能防御）
 
 XSS注入方法：
 
@@ -640,11 +636,21 @@ XSS的预防：
 4. 输入内容长度控制
 
 5. HTTP-only-Cookie：禁止JavaScript读取某些敏感Cookie，攻击者完成之后也无法窃取此Cookie
+
+6. 建立白名单CSP：CSP的开启--1. 设置HTTP Header中的Content-Security-Policy 2. 设置meta标签<meta http-equiv="Content-Security-Policy">
+比如只允许加载本站资源：Content-Security-Policy：defalt-src 'self'
+只允许加载HTTPS协议图片：Content-Security-Policy:img-src https://*
+允许加载任何来源框架：Content-Security-Policy：child-src 'none'
 ```
 
 ##### 2. CSRF
 
-跨站请求伪造，攻击者诱导受害者进入第三方网站，在第三方网站，向被攻击网站发起跨域请求。利用受害者在被攻击网站已获取的注册凭证，绕过后台的用户验证，达到冒充用户对呗攻击的王振执行某项操作的目的。CSRF利用网站对用户浏览器的信任。
+跨站请求伪造，攻击者诱导受害者进入第三方网站，在第三方网站，向被攻击网站发起跨域请求。利用受害者在被攻击网站已获取的注册凭证，绕过后台的用户验证，达到冒充用户对被攻击的网站执行某项操作的目的。CSRF利用网站对用户浏览器的信任。
+
+受害者必须依次完成两个步骤：
+
+1. 登录受信任网站A，并在本地生成Cookie
+2. 在不登出A的情况，访问危险的B
 
 CSRF的攻击类型：
 
@@ -695,10 +701,20 @@ CSRF的特点：
 
 CSRF的防护：
 
+遵循几种规则：
+
+1. Get请求不对数据进行修改
+2. 不让第三方网站访问到Cookie
+3. 阻止第三方网站请求接口
+4. 请求时附带验证信息，比如验证码或者token
+
 1. 同源检测
-2. Token验证
-3. 双重Cookie验证
-4. Samesite Cookie属性
+
+   HTTP协议中，header有用于标记源域名：Origin Header 和 Referer Header
+
+2. Token验证（因为攻击者冒用的是cookie，所以可以携带一个token作为验证，可以把token存在服务器的session，在客户端把打入所有的a和form标签）
+
+3. Cookie属性Samesite（如果 Samesite=Strict，csrf没有机会，但是跳转子域名或者是新标签打开刚刚登录的网站之前的cookie就不存在；若为lax，安全性就不高；samesite兼容性不好，不支持子域）
 
 
 
@@ -710,21 +726,21 @@ CSRF的防护：
 
 #### 2. Vue生命周期
 
-beforeCreate
+beforeCreate ——new Vue之后的第一个钩子函数，当前阶段data，watch，method，computed上面的数据和方法都都不能被访问
 
-created
+created——实例创建完成当前阶段已完成数据观测可以使用数据和更改数据不会触发updated函数；当前不能与DOM交互，如果非要访问DOM，就通过$necttick的方式
 
-beforeMount
+beforeMount——挂载之前，虚拟DOM完成即将开始渲染，模板导入渲染函数，可以使用数据和更改数据不会触发updated函数
 
-mounted
+mounted——真实DOM挂载完毕，数据完成双向绑定，可以访问到DOM节点，使用$ref对DOM进行操作
 
-beforeUpdate
+beforeUpdate——响应式数据更新之前，可更改数据，不会造成重渲染
 
-updated
+updated——数据更新完毕之后，当前阶段组件DOM已完成更新，避免在此修改数据，会造成无限循环的更新
 
-beforeDestroy
+beforeDestroy——销毁实例之前，可清除定时器，监听，解绑函数等等
 
-destroyed
+destroyed——实例销毁之后，当前只剩下DOM空壳。组件一杯拆除，数据绑定被卸除，监听被移出，子实例也被销毁
 
 #### 3. Vue响应式
 
@@ -991,6 +1007,14 @@ JS如何模拟DOM结构
 }
 ```
 
+DOM可以通过JS对象来模拟，反之也可以通过JS对象来渲染出对于的DOM，难点就在于如何判断新旧两个JS对象的最小差异并且实现拒不更新DOM
+
+ Virtual DOM 提高性能是其中一个优势，其实**最大的优势**还是在于：
+
+1. 将 Virtual DOM 作为一个兼容层，让我们还能对接非 Web 端的系统，实现跨端开发。
+2. 同样的，通过 Virtual DOM 我们可以渲染到其他的平台，比如实现 SSR、同构渲染等等。
+3. 实现组件的高度抽象化
+
 #### 7. diff算法
 
 优化时间复杂度到On
@@ -1040,6 +1064,66 @@ action可以整合多个mutation
 异步渲染（以及合并data修改），以提高渲染性能
 
 $nextTick在DOM更新完成之后，触发回调
+
+
+
+#### 14. 路由原理
+
+本质就是监听URL变化，然后匹配路由规则，显示相应的页面
+
+##### Hash模式
+
+`www.test.com/#/`当 `#` 后面的哈希值发生变化时，可以通过 `hashchange` 事件来监听到 URL 的变化，从而进行跳转页面，并且无论哈希值如何变化，服务端接收到的 URL 请求永远是 `www.test.com`。
+
+##### History模式
+
+H5新功能，主要使用 `history.pushState` 和 `history.replaceState` 改变 URL
+
+
+
+- Hash 模式只可以更改 `#` 后面的内容，History 模式可以通过 API 设置任意的同源 URL
+- History 模式可以通过 API 添加任意类型的数据到历史记录中，Hash 模式只能更改哈希值，也就是字符串
+- Hash 模式无需后端配置，并且兼容性好。History 模式在用户手动输入地址或者刷新页面的时候会发起 URL 请求，后端需要配置 `index.html` 页面用于匹配不到静态资源的时候
+
+#### 15. 组件通信
+
+##### 父子通信
+
+props，emit —— 单向数据流，子组件必须通过发送事件的方式告知父组件修改数据
+
+
+
+
+
+#### 16. keep-alive
+
+防止组件状态多次渲染，可以使用keep-alive包裹
+
+对于 `keep-alive` 组件来说，它拥有两个独有的生命周期钩子函数，分别为 `activated` 和 `deactivated` 。用 `keep-alive` 包裹的组件在切换时不会进行销毁，而是缓存到内存中并执行 `deactivated` 钩子函数，命中缓存渲染后会执行 `actived` 钩子函数。
+
+`include`定义缓存白名单，keep-alive会缓存命中的组件；
+
+`exclude`定义缓存黑名单，被命中的组件将不会被缓存；
+
+`max`定义缓存组件上限，超出上限使用LRU的策略置换缓存数据。
+
+原理：
+
+`<keep-alive>` 组件是一个抽象组件，它的实现通过自定义 `render` 函数并且利用了插槽，我们也是在keep-alive标签内部写东西，所以先获取默认插槽，再获取它的第一个子节点，keep-alive只处理第一个子元素，所以一般和它搭配使用的component动态组件或者是router-view
+
+然后判断当前组件的名称和include和exclude的关系，如果满足了配置 `include` 且不匹配或者是配置了 `exclude` 且匹配，那么就直接返回这个组件的 `vnode`，否则的话走下一步缓存；如果命中缓存，则直接从缓存中拿vnode的实力，并且调整了key的顺序放在最后一个；否则把vnode设置缓存，最后还有一个逻辑，如果配置了 `max` 并且缓存的长度超过了 `this.max`，还要从缓存中删除第一个。
+
+除了从缓存中删除外，还要判断如果要删除的缓存并的组件 `tag` 不是当前渲染组件 `tag`，也执行删除缓存的组件实例的 `$destroy` 方法。逻辑很简单，观测他们的变化执行 `pruneCache` 函数，其实就是对 `cache` 做遍历，发现缓存的节点名称和新的规则没有匹配上的时候，就把这个缓存节点从缓存中摘除。
+
+ Vue 的渲染最后都会到 `patch` 过程，而组件的 `patch` 过程会执行 `createComponent` 方法，第一次渲染的时候，`vnode.componentInstance` 为 `undefined`，`vnode.data.keepAlive` 为 true，因为它的父组件 `<keep-alive>` 的 `render` 函数会先执行，那么该 `vnode` 缓存到内存中，并且设置 `vnode.data.keepAlive` 为 true，因此 `isReactivated` 为 `false`，那么走正常的 `init` 的钩子函数执行组件的 `mount`。当 `vnode` 已经执行完 `patch` 后，执行 `initComponent` 函数，`vnode.elm` 缓存了 `vnode` 创建生成的 DOM 节点。
+
+ `B` 组件再次点击 `switch` 切换到 `A` 组件，就会命中缓存渲染。`patchVnode` 在做各种 diff 之前，会先执行 `prepatch` 的钩子函数，`prepatch` 核心逻辑就是执行 `updateChildComponent` 方法，执行 `prepatch` 的时候，需要对自己的 `children`，也就是这些 `slots` 做重新解析，并触发 `<keep-alive>` 组件实例 `$forceUpdate` 逻辑，也就是重新执行 `<keep-alive>` 的 `render` 方法，这个时候如果它包裹的第一个组件 `vnode` 命中缓存，则直接返回缓存中的 `vnode.componentInstance`，这个时候 `isReactivated` 为 true，并且在执行 `init` 钩子函数的时候不会再执行组件的 `mount` 过程了，这也就是被 `<keep-alive>` 包裹的组件在有缓存的时候就不会在执行组件的 `created`、`mounted` 等钩子函数的原因了。回到 `createComponent` 方法，在 `isReactivated` 为 true 的情况下会执行 `reactivateComponent` 方法
+
+
+
+#### 17. extend能做什么
+
+作用是扩展组件生成一个构造器，与$mount一起使用
 
 ### webpack模块
 
@@ -1153,6 +1237,12 @@ $nextTick在DOM更新完成之后，触发回调
 webpack 2增加了tree-shaking的功能
 
 Tree-shaking的本质是消除无用的js代码
+
+为了学会使用 *tree shaking*，你必须……
+
+- 使用 ES2015 模块语法（即 `import` 和 `export`）。
+- 在项目 `package.json` 文件中，添加一个 "sideEffects" 入口。
+- 引入一个能够删除未引用代码(dead code)的压缩工具(minifier)（例如 `UglifyJSPlugin`）。
 
 #### 3. 基本配置
 
@@ -1636,7 +1726,7 @@ bundle——最终输出文件（一个chunk对应一个bundle）
 
      vue react会自动删掉调试代码（如开发环境的warning）
 
-     启动Tree-Shaking（必须使用ES6 Module才能使tree-shaking生效）
+     启动Tree-Shaking（webpack4 自己就有了 ，必须使用ES6 Module才能使tree-shaking生效）
 
      ​	为什么？
 
@@ -1789,3 +1879,99 @@ ws.onerror = function(event) {
 
 
 
+
+
+### 网络
+
+#### 1. TCP
+
+**第一次握手**
+
+客户端向服务端发送连接请求报文段。该报文段中包含自身的数据通讯初始序号。请求发送后，客户端便进入 SYN-SENT 状态。
+
+**第二次握手**
+
+服务端收到连接请求报文段后，如果同意连接，则会发送一个应答，该应答中也会包含自身的数据通讯初始序号，发送完成后便进入 SYN-RECEIVED 状态。
+
+**第三次握手**
+
+当客户端收到连接同意的应答后，还要向服务端发送一个确认报文。客户端发完这个报文段后便进入 ESTABLISHED 状态，服务端收到这个应答后也进入 ESTABLISHED 状态，此时连接建立成功。
+
+PS：第三次握手中可以包含数据，通过快速打开（TFO）技术就可以实现这一功能。其实只要涉及到握手的协议，都可以使用类似 TFO 的方式，客户端和服务端存储相同的 cookie，下次握手时发出 cookie 达到减少 RTT 的目的。
+
+
+
+为什么TCP两次就可以建立连接，却需要3次？
+
+防止出现失效的连接请求报文段被服务端接收的情况，从而产生错误
+
+
+
+**第一次握手**
+
+若客户端 A 认为数据发送完成，则它需要向服务端 B 发送连接释放请求。
+
+**第二次握手**
+
+B 收到连接释放请求后，会告诉应用层要释放 TCP 链接。然后会发送 ACK 包，并进入 CLOSE_WAIT 状态，此时表明 A 到 B 的连接已经释放，不再接收 A 发的数据了。但是因为 TCP 连接是双向的，所以 B 仍旧可以发送数据给 A。
+
+**第三次握手**
+
+B 如果此时还有没发完的数据会继续发送，完毕后会向 A 发送连接释放请求，然后 B 便进入 LAST-ACK 状态。
+
+PS：通过延迟确认的技术（通常有时间限制，否则对方会误认为需要重传），可以将第二次和第三次握手合并，延迟 ACK 包的发送。
+
+**第四次握手**
+
+A 收到释放请求后，向 B 发送确认应答，此时 A 进入 TIME-WAIT 状态。该状态会持续 2MSL（最大段生存期，指报文段在网络中生存的时间，超时会被抛弃） 时间，若该时间段内没有 B 的重发请求的话，就进入 CLOSED 状态。当 B 收到确认应答后，也便进入 CLOSED 状态。
+
+
+
+**为什么 A 要进入 TIME-WAIT 状态，等待 2MSL 时间后才进入 CLOSED 状态？**
+
+为了保证 B 能收到 A 的确认应答。若 A 发完确认应答后直接进入 CLOSED 状态，如果确认应答因为网络问题一直没有到达，那么会造成 B 不能正常关闭。
+
+#### 2. POST和GET区别
+
+- Get 请求能缓存，Post 不能
+- Post 相对 Get 安全一点点，因为Get 请求都包含在 URL 里（当然你想写到 `body` 里也是可以的），且会被浏览器保存历史纪录。Post 不会，但是在抓包的情况下都是一样的。
+- URL有长度限制，会影响 Get 请求，但是这个长度限制是浏览器规定的，不是 RFC 规定的
+- Post 支持更多的编码类型且不对数据类型限制
+
+#### 3. 常见状态码
+
+**2XX 成功**
+
+- 200 OK，表示从客户端发来的请求在服务器端被正确处理
+- 204 No content，表示请求成功，但响应报文不含实体的主体部分
+- 205 Reset Content，表示请求成功，但响应报文不含实体的主体部分，但是与 204 响应不同在于要求请求方重置内容
+- 206 Partial Content，进行范围请求
+
+**3XX 重定向**
+
+- 301 moved permanently，永久性重定向，表示资源已被分配了新的 URL
+- 302 found，临时性重定向，表示资源临时被分配了新的 URL
+- 303 see other，表示资源存在着另一个 URL，应使用 GET 方法获取资源
+- 304 not modified，表示服务器允许访问资源，但因发生请求未满足条件的情况
+- 307 temporary redirect，临时重定向，和302含义类似，但是期望客户端保持请求方法不变向新的地址发出请求
+
+**4XX 客户端错误**
+
+- 400 bad request，请求报文存在语法错误
+- 401 unauthorized，表示发送的请求需要有通过 HTTP 认证的认证信息
+- 403 forbidden，表示对请求资源的访问被服务器拒绝
+- 404 not found，表示在服务器上没有找到请求的资源
+
+**5XX 服务器错误**
+
+- 500 internal sever error，表示服务器端在执行请求时发生了错误
+- 501 Not Implemented，表示服务器不支持当前请求所需要的某个功能
+- 503 service unavailable，表明服务器暂时处于超负载或正在停机维护，无法处理请求
+
+#### 4. HTTP版本
+
+HTTP1.1——1. 增加keep-alive 2. 管线化 3. 增加了cache-control
+
+HTTP2 —— 1. 二进制协议 2.可以在一个TCP连接中并发请求多个HTTP请求 3. 压缩头部 4. 允许服务端在客户端放cache
+
+ 
