--- a/复习.md
+++ b/复习.md
@@ -1,5 +1,117 @@
 ## 复习
 
+### CSS模块
+
+#### 1. 水平垂直居中
+
+已知居中元素定宽高
+
+1. position:absolute + 负margin
+
+```
+.out{
+      position: relative;
+      width: 500px;
+      height: 500px;
+}
+.inner{
+      width: 300px;
+      height: 300px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-left: -150px;
+      margin-top: -150px;
+}
+```
+
+2. position:absolute + margin: auto
+
+```
+.out{
+      position: relative;
+      width: 500px;
+      height: 500px;
+}
+.inner{
+      width: 300px;
+      height: 300px;
+      position: absolute;
+      margin: auto;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+}
+```
+
+3. position:absolute + calc
+
+```
+.out{
+      position: relative;
+      width: 500px;
+      height: 500px;
+}
+.inner{
+      width: 300px;
+      height: 300px;
+      position: absolute;
+      top: calc(50% - 150px);
+      left: calc(50% - 150px);
+}
+```
+
+居中元素不定宽高
+
+1. position:absolute + transform
+
+```
+.out{
+      position: relative;
+      width: 500px;
+      height: 500px;
+}
+.inner{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+}
+```
+
+2. flex （简单，省略）
+3. css table属性
+
+```
+.out{
+      width: 500px;
+      height: 500px;
+      display: table-cell;
+      text-align: center;
+      vertical-align: middle;
+}
+.inner{
+      display: inline-block;
+}
+```
+
+4. grid
+
+```
+.out{
+      width: 500px;
+      height: 500px;
+      display: grid;
+}
+.inner{
+      align-self: center;
+      justify-self: center;
+}
+```
+
+
+
 ### JavaScript模块
 
 #### 1. 实现一个new
@@ -75,19 +187,21 @@ Function.prototype.my_bind = function (context){
     if(typeof this !== 'function ') {
         throw new TypeError('error')
     }
-    var that = this
+    var self = this
     console.log(that)
-    var args = [...arguments].slice(1)
-    console.log(args)
-    // 返回一个函数
-    return function F() {
-        console.log(this)
-        // 可以new F()，所以需要判断
-        if (this instanceof F) {
-            return new _this(...args, ...arguments)
-        }
-        return _this.apply(context, args.concat(...arguments))
+    var args = Array.prototype.slice.call(arguments, 1);
+    var fNOP = function () {};
+    var fBound = function () {
+        var bindArgs = Array.prototype.slice.call(arguments);
+        // 当作为构造函数时，this 指向实例，此时结果为 true，将绑定函数的 this 指向该实例，可以让实例获得来自绑定函数的值
+        // 以上面的是 demo 为例，如果改成 `this instanceof fBound ? null : context`，实例只是一个空对象，将 null 改成 this ，实例会具有 habit 属性
+        // 当作为普通函数时，this 指向 window，此时结果为 false，将绑定函数的 this 指向 context
+        return self.apply(this instanceof fNOP ? this : context, args.concat(bindArgs));
     }
+    // 改返回函数的 prototype 为绑定函数的 prototype，实例就可以继承绑定函数的原型中的值
+    fNOP.prototype = this.prototype;
+    fBound.prototype = new fNOP();
+    return fBound
 }
 ```
 
@@ -715,6 +829,104 @@ CSRF的防护：
 2. Token验证（因为攻击者冒用的是cookie，所以可以携带一个token作为验证，可以把token存在服务器的session，在客户端把打入所有的a和form标签）
 
 3. Cookie属性Samesite（如果 Samesite=Strict，csrf没有机会，但是跳转子域名或者是新标签打开刚刚登录的网站之前的cookie就不存在；若为lax，安全性就不高；samesite兼容性不好，不支持子域）
+
+#### 26. 防抖，节流
+
+防抖：使用setTimeout辅助实现，主要就是清零；如果方法多次触发，就把上次记录的延迟执行代码清掉，重新开始计时。若计时器件事件没有被重新触发，等延迟时间计时完毕，则执行目标代码。
+
+```javascript
+function debounce(func, wait) {
+	var timer
+	return function() {
+		var context = this
+		var args = arguments
+		clearTimeout(timer)
+		timer = setTimeout(function(){
+			func.apply(context, args)
+		}, wait)
+	}
+}
+```
+
+节流：控制事件的频次
+
+方法一：触发事件的时候，取出当前时间戳，减去之前的时间戳，如果大于，就执行，然后更显现在的时间戳为之前的时间戳，如果小于就不执行
+
+```javascript
+function throtte(func, wait) {
+	var context, args
+	var before = 0
+	return function() {
+		var now = +new Date() // 隐式转换，相当于ToNumber。将字符串直接转化为number类型
+		context = this
+		args = arguments
+		if (now - before > wait) {
+			func.apply(context, args)
+			before = now
+		}
+
+	}
+}
+```
+
+方法二：使用定时器
+
+```javascript
+function throtte(func, wait) {
+	var timer
+	var context, args
+	return function() {
+		context = this
+		args = arguments
+		if (!timer) {
+			timer = setTimeout(function(){
+				timer = null
+				func.apply(this, args)
+			}, wait)
+		}
+	}
+}
+```
+
+
+
+#### 27. 数组去重
+
+1. indexOf
+
+   ```javascript
+   function unique(array) {
+       var res = [];
+       for (var i = 0, len = array.length; i < len; i++) {
+           var current = array[i];
+           if (res.indexOf(current) === -1) {
+               res.push(current)
+           }
+       }
+       return res;
+   }
+   ```
+
+2. filter
+
+   ```javascript
+   function unique(array) {
+       var res = array.filter(function(item, index, array){
+           return array.indexOf(item) === index;
+       })
+       return res;
+   }
+   ```
+
+3. es6 set
+
+   ```javascript
+   function unique(array) {
+      return Array.from(new Set(array));
+   }
+   ```
+
+#### 28. 打平数组
 
 
 
