--- a/复习.md
+++ b/复习.md
@@ -928,7 +928,13 @@ function throtte(func, wait) {
 
 #### 28. 打平数组
 
+#### 29. 渲染几百万大量日志文件怎么优化
 
+1. 只渲染可视区域，分批次请求
+2. 如果一次性拿到大量数据，可以判断滑块和滚动条的比例拿到对应位置的数据；如何解决轻微滚动？类似轮播图的原理，只渲染一条数据
+3. 从代码层面，因为日志文件不需要修改，所以可以使用Object.defineProperty来进行属性描述符配置不可修改或者是Object.freeze() (Object.seal()密封)
+
+#### 30. JSONP及其原理
 
 ### Vue
 
